finished the ant forms

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -58,3 +58,14 @@ section {
     padding: 0 20px;
   }
 }
+
+.form-container{
+  margin: 0 auto;
+  margin-top: 60px;
+  width: 440px;
+  padding-right: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
