--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,7 +8,7 @@ html {
 
 body,
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: -apple-system , BlinkMacSystemFont , "Segoe UI" , "Roboto" , "Helvetica Neue" , "Ubuntu" , sans-serif;
 }
 
 h1,
@@ -41,6 +41,7 @@ section {
 }
 
 .container {
+
   @include container(1250px);
   padding: 0 20px;
 
@@ -67,5 +68,72 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+}
 
+.user-profile{
+  @include flex-center;
+  flex-direction: column;
+
+  @include container(600px);
+  padding: 0 20px;
+
+  @media (max-width: 550px) {
+    padding: 0 20px;
+  }
+}
+
+.favorite-groomers{
+  @include flex-center;
+  flex-direction: column;
+
+  @include container(700px);
+  padding: 0 20px;
+
+  @media (max-width: 550px) {
+    padding: 0 20px;
+  }
+}
+
+.user-info{
+  @include flex-center;
+  width: 70%;
+  padding: 5%;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: 600;
+}
+
+.groomers-mini{
+  @include flex-center;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.groomer-faved{
+  width: 180px;
+  height: 200px;
+  border: 1px solid grey;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 5px;
+}
+
+.profile-pic{
+  width: 120px;
+}
+
+.groomer-pic{
+  width: 100px;
+}
+
+.edit{
+  background: $white;
+  width: 220px;
+  height: 40px;
+  font-size: 1.3rem;
+  font-weight: 600;
 }
