--- a/src/styles/components/mapbox.scss
+++ b/src/styles/components/mapbox.scss
@@ -21,8 +21,9 @@
 .mapbox .sidebar {
   display: inline-block;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 60px;
+  left: 10px;
+  height: 23px;
   margin: 12px;
   padding: 6px;
   color: #ffffff;
