--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,8 +8,7 @@ html {
 
 body,
 html {
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Helvetica Neue', 'Ubuntu', sans-serif;
+  font-family: 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Ubuntu', sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -21,6 +20,16 @@ h5 {
   font-size: 2.5em;
   margin: 15px 0;
   cursor: default;
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 4rem;
+
+  &.title {
+    margin-bottom: 40px;
+    text-transform: capitalize;
+  }
 }
 
 p {
@@ -42,6 +51,11 @@ svg {
   @include container(1250px);
   padding: 0 20px;
   width: 100%;
+
+  &.page {
+    @include container(1450px);
+    margin-top: 25px;
+  }
 
   @media (max-width: 1700px) {
     @include container(1200px);
