add form inputs including a working date-picker
- Select Pet
- Select Service
- Select Date (3rd-party library date-picker)

--- a/src/styles/components/appointments.scss
+++ b/src/styles/components/appointments.scss
@@ -1,4 +1,12 @@
 .appointments {
+  .form-item {
+    margin-bottom: 28px;
+
+    &.input {
+      max-width: 400px;
+    }
+  }
+
   .groomer-map {
     position: relative;
     width: 100%;
