--- a/src/styles/components/appointments.scss
+++ b/src/styles/components/appointments.scss
@@ -1,15 +1,60 @@
 .appointments {
-  .form-item {
-    margin-bottom: 28px;
-
-    &.input {
-      max-width: 400px;
-    }
-  }
-
-  .groomer-map {
+  .appointments-form {
     position: relative;
-    width: 100%;
-    height: 500px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 55% 45%;
+
+    .groomer-map {
+      position: relative;
+      width: 100%;
+      height: 500px;
+    }
+
+    .groomer-card {
+      max-width: 400px;
+      margin: auto auto;
+      margin-bottom: 28px;
+
+      .disabled {
+      }
+    }
+
+    .form-item {
+      &.input {
+        max-width: 400px;
+      }
+    }
+
+    button.submit {
+      background: #0093ff;
+      border-color: #0093ff;
+      margin-bottom: 15px;
+      margin-top: 13px;
+      float: right;
+    }
+
+    input.ant-input,
+    .ant-form-item .ant-select,
+    .ant-form-item .ant-cascader-picker {
+      margin-bottom: 15px;
+    }
+
+    @media (max-width: 900px) {
+      grid-gap: 40px;
+      grid-template-columns: 100%;
+
+      .groomer-card {
+        width: 80%;
+        max-width: inherit;
+      }
+
+      .form-item {
+        &.input {
+          width: 80%;
+          max-width: inherit;
+        }
+      }
+    }
   }
 }
